The main structure and styles of the site

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,57 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <header>
+        <section class="header-section">
+            <div class="container">
+                <h2>Hello, Hexlet</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi earum quo assumenda mollitia aut, nemo minima delectus sapiente vero? Corrupti blanditiis commodi est necessitatibus. Aspernatur labore consectetur soluta eos perspiciatis.</p>
+            </div>
+        </section>
+    </header>
+    <main>
+        <section class="video-section">
+            <div class="container">
 
+            </div>
+        </section>
+        <nav class="navigation">
+            <div class="container">
+
+            </div>
+        </nav>
+        <section class="ikea-effect">
+            <div class="container">
+
+            </div>
+        </section>
+        <section class="premature-optimization">
+            <div class="container">
+
+            </div>
+        </section>
+        <section class="distortion-of-novelty">
+            <div class="container">
+
+            </div>
+        </section>
+        <section class="hyperbolic-depreciation">
+            <div class="container">
+
+            </div>
+        </section>
+        <section class="errors-in-planning">
+            <div class="container">
+
+            </div>
+        </section>
+    </main>
+    <footer>
+        <section class="footer">
+            <div class="container">
+
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
