Creating and styling the (1st) header-section

--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,33 @@
 </head>
 <body>
     <header>
-        <section class="header-section">
+        <section class="header-section bg-img">
             <div class="container">
-                <h2>Hello, Hexlet</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi earum quo assumenda mollitia aut, nemo minima delectus sapiente vero? Corrupti blanditiis commodi est necessitatibus. Aspernatur labore consectetur soluta eos perspiciatis.</p>
+                <h1 class="title">
+                    <span class="orange">
+                    Когнитивные
+                    <br>
+                    искажения</span>
+                    <br>
+                    в программировании
+                </h1>
+                <img src="img/main.png" alt="Человечек за ноутбуком" class="header-img">
+                <div class="columns">
+                    <div class="column-left">
+                        <p>
+                            Мы, разработчики, часто сталкиваемся с проблемами, которые идут вразрез с нашей продуктивностью. Но мы часто игнорируем целостную картину. Некоторые из этих проблем малозаметны, некоторые существенны. Иногда с ними можно как-то справиться, а иногда, к сожалению, нет.
+                        </p>
+                    </div>
+                    <div class="column-right">
+                        <p>
+                            Вместе они формируют что-то вроде замкнутого цикла, и это может привести к длительной потере продуктивности, багам и бесконечному разочарованию.
+                        <br>
+                        <br>
+                            Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.
+                        </p>
+                        <a href="#navigation" class="btn-link">Подробнее</a>
+                    </div>
+                </div>
             </div>
         </section>
     </header>
@@ -23,32 +46,32 @@
 
             </div>
         </section>
-        <nav class="navigation">
+        <nav id="navigation">
             <div class="container">
 
             </div>
         </nav>
-        <section class="ikea-effect">
+        <section id="ikea-effect bg-img">
             <div class="container">
 
             </div>
         </section>
-        <section class="premature-optimization">
+        <section id="premature-optimization bg-img">
             <div class="container">
 
             </div>
         </section>
-        <section class="distortion-of-novelty">
+        <section id="distortion-of-novelty bg-img">
             <div class="container">
 
             </div>
         </section>
-        <section class="hyperbolic-depreciation">
+        <section id="hyperbolic-depreciation bg-img">
             <div class="container">
 
             </div>
         </section>
-        <section class="errors-in-planning">
+        <section id="errors-in-planning bg-img">
             <div class="container">
 
             </div>
