--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <section class="header-section bg-img">
-            <div class="container">
+            <div class="container header-container">
                 <h1 class="title">
                     <span class="orange">
                     Когнитивные
@@ -42,36 +42,44 @@
     </header>
     <main>
         <section class="video-section">
-            <div class="container">
-
+            <div class="container video-container">
+                <h2 class="video-title">
+                    Что же это такое,
+                    <br>
+                    <span class="orange">когнитивные искажения?</span>
+                </h2>
+                <p class="video-description">
+                    Что такое когнитивные искажения. Petrovna Channel
+                </p>
+                <iframe class="video" width="919" height="569" src="https://www.youtube.com/embed/jie9AizBqss" frameborder="0" allowfullscreen></iframe>
             </div>
         </section>
         <nav id="navigation">
-            <div class="container">
+            <div class="container nav-container">
 
             </div>
         </nav>
-        <section id="ikea-effect bg-img">
+        <section id="ikea-effect" class="bg-img">
             <div class="container">
 
             </div>
         </section>
-        <section id="premature-optimization bg-img">
+        <section id="premature-optimization" class="bg-img">
             <div class="container">
 
             </div>
         </section>
-        <section id="distortion-of-novelty bg-img">
+        <section id="distortion-of-novelty" class="bg-img">
             <div class="container">
 
             </div>
         </section>
-        <section id="hyperbolic-depreciation bg-img">
+        <section id="hyperbolic-depreciation" class="bg-img">
             <div class="container">
 
             </div>
         </section>
-        <section id="errors-in-planning bg-img">
+        <section id="errors-in-planning" class="bg-img">
             <div class="container">
 
             </div>
