--- a/src/index.html
+++ b/src/index.html
@@ -56,74 +56,82 @@
         </section>
         <nav id="navigation">
             <div class="container nav-container">
-                <div class="">
-                    <ul class="col-3 mb-20">
-                        <li>
-                            <h2 class="nav-title">
-                                <span class="orange">5 когнитивных искажений</span>
-                                <br>
-                                о существовании которых стоит помнить
-                             </h2>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#ikea-effect" class="nav-link">
-                            <div class="card-number">1</div>
-                            <h3 class="orange">
-                                Эффект ИКЕА
-                            </h3>
-                            <p>
-                                Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.
-                            </p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#premature-optimization" class="nav-link">
-                            <div class="card-number">2</div>
-                            <h3 class="orange">
-                                Преждевременная оптимизация
-                            </h3>
-                            <p>
-                                Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.
-                            </p>
-                            </a>
-                        </li>
-                    </ul>
+                <div class="col-3 mb-20">
+                    <div>
+                        <h2 class="nav-title">
+                            <span class="orange">5 когнитивных искажений</span>
+                            <br>
+                            о существовании которых стоит помнить
+                        </h2>
+                    </div>
+                    <div>
+                        <a href="#ikea-effect" class="nav-link">
+                            <div class="nav-item">
+                                <span class="card-number">1</span>
+                                <h3 class="orange">
+                                    Эффект ИКЕА
+                                </h3>
+                                <p>
+                                    Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.
+                                </p>
+                            </div>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#premature-optimization" class="nav-link">
+                            <div class="nav-item">
+                                <span class="card-number">2</span>
+                                <h3 class="orange">
+                                    Преждевременная оптимизация
+                                </h3>
+                                <p class="mb-0">
+                                    Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.
+                                </p>
+                            </div>
+                        </a>
+                    </div>
                 </div>
-                    <ul class="col-3 m-0">
-                        <li class="nav-item">
-                            <a href="#distortion-of-novelty" class="nav-link">
-                            <div class="card-number">3</div>
-                            <h3 class="orange">
-                                Искажение новизны
-                            </h3>
-                            <p>
-                                Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.
-                            </p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#hyperbolic-depreciation" class="nav-link">
-                            <div class="card-number">4</div>
-                            <h3 class="orange">
-                                Гиперболическое обесценивание
-                            </h3>
-                            <p>
-                                Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.
-                            </p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#errors-in-planning" class="nav-link">
-                            <div class="card-number">5</div>
-                            <h3 class="orange">
-                                Ошибка планирования
-                            </h3>
-                            <p>
-                                Неправильно рассчитывать время необходимое для завершения задачи.
-                            </p>
-                            </a>
-                        </li>
-                    </ul>
+                <div class="col-3 m-0">
+                    <div>
+                        <a href="#distortion-of-novelty" class="nav-link">
+                            <div class="nav-item">                                   
+                                <span class="card-number">3</span>
+                                <h3 class="orange">
+                                    Искажение новизны
+                                </h3>
+                                <p>
+                                    Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.
+                                </p>
+                            </div>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#hyperbolic-depreciation" class="nav-link">
+                            <div class="nav-item">
+                                <span class="card-number">4</span>
+                                <h3 class="orange">
+                                    Гиперболическое обесценивание
+                                </h3>
+                                <p class="mb-0">
+                                    Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.
+                                </p>
+                            </div>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#errors-in-planning" class="nav-link">
+                            <div class="nav-item">
+                                <span class="card-number">5</span>
+                                <h3 class="orange">
+                                    Ошибка планирования
+                                </h3>
+                                <p>
+                                    Неправильно рассчитывать время необходимое для завершения задачи.
+                                </p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
             </div>
         </nav>
         <section id="ikea-effect" class="bg-img">
