Creating and styling (4th) ikea effect section

--- a/src/index.html
+++ b/src/index.html
@@ -136,7 +136,35 @@
         </nav>
         <section id="ikea-effect" class="bg-img">
             <div class="container">
-
+                <div class="top-cols">
+                    <div>
+                        <img src="img/1.png" alt="Два человечка за компьютером" class="top-col-img">
+                    </div>
+                    <div>
+                        <span class="top-col-subtitle">
+                            Когнитивные искажения
+                        </span>
+                        <h3 class="top-col-title">
+                            Эффект ИКЕА
+                        </h3>
+                        <p class="top-col-text">
+                            Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.
+                        </p>
+                    </div>
+                </div>
+                <div class="bottom-cols">
+                    <h4 class="bottom-col-title">
+                        Как проявляется
+                    </h4>
+                    <div class="bottom-col-text">
+                        <p>
+                            Когнитивное искажение называется так из-за того, что потребители зачастую предпочитают покупать товары, которые они могут собрать сами, а не уже собранные кем-то.
+                        </p>
+                        <p>
+                            Мы склонны переоцнивать наши собственные решения и недооценивать решения других. Если вы когда-то работали в компании, которая использовала тупой внутренний инструмент вместо более удобного готового решения, вы понимаете, о чём я говорю.
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
         <section id="premature-optimization" class="bg-img">
