Creating and styling (5th) premature optimization, (6th) distortion of novelty, (7th) hyperbolic depreciation and (8th) errors in planning sections

--- a/src/index.html
+++ b/src/index.html
@@ -167,24 +167,139 @@
                 </div>
             </div>
         </section>
-        <section id="premature-optimization" class="bg-img">
+        <section id="premature-optimization" class="bg-img bg-brown white">
             <div class="container">
-
+                <div class="top-cols">
+                    <div>
+                        <span class="top-col-subtitle translucent-white">
+                            Когнитивные искажения
+                        </span>
+                        <h3 class="top-col-title">
+                            Преждевременная оптимизация
+                        </h3>
+                        <p class="top-col-text">
+                            Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.
+                        </p>
+                    </div>
+                    <div>
+                        <img src="img/2.png" alt="Человечек с ракетой, вылетающей из ноутбука" class="top-col-img">
+                    </div>
+                </div>
+                <div class="bottom-cols">
+                    <h4 class="bottom-col-title brown bg-white">
+                        Как проявляется
+                    </h4>
+                    <div class="bottom-col-text">
+                        <p>
+                            Если вы добавите аэродинамический спойлер к своему старому автомобилю вместо ремонта мотора, то автомобиль не станет быстрее.
+                        </p>
+                        <p>
+                            Отличный пример: писать максимально подтюненный и высокопроизводительный код для всего лишь экспериментального проекта.
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
         <section id="distortion-of-novelty" class="bg-img">
             <div class="container">
-
+                <div class="top-cols">
+                    <div>
+                        <img src="img/3.png" alt="Два человечка за компьютером" class="top-col-img">
+                    </div>
+                    <div>
+                        <span class="top-col-subtitle">
+                            Когнитивные искажения
+                        </span>
+                        <h3 class="top-col-title">
+                            Искажение новизны
+                        </h3>
+                        <p class="top-col-text">
+                            Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.
+                        </p>
+                    </div>
+                </div>
+                <div class="bottom-cols">
+                    <h4 class="bottom-col-title">
+                        Как проявляется
+                    </h4>
+                    <div class="bottom-col-text">
+                        <p>
+                            Часто это искажение настигает нас, когда нужно решение проблемы и… о! Мы как раз только что решили подобную проблему! Давайте использовать это же решение, потому что оно сработало, и мы помним как!
+                        </p>
+                        <p>
+                            Вы замечаете, что пользуетесь теми же рабочими методиками раз за разом? Если да, возможно, вы смотрите на разные проблемы под одним и тем же углом.
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
-        <section id="hyperbolic-depreciation" class="bg-img">
+        <section id="hyperbolic-depreciation" class="bg-img bg-brown white">
             <div class="container">
-
+                <div class="top-cols">
+                    <div>
+                        <span class="top-col-subtitle translucent-white">
+                            Когнитивные искажения
+                        </span>
+                        <h3 class="top-col-title">
+                            Гиперболическое обесценивание
+                        </h3>
+                        <p class="top-col-text">
+                            Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.
+                        </p>
+                    </div>
+                    <div>
+                        <img src="img/4.png" alt="Человечек с идеей в виде лампочки" class="top-col-img">
+                    </div>
+                </div>
+                <div class="bottom-cols">
+                    <h4 class="bottom-col-title brown bg-white">
+                        Как проявляется
+                    </h4>
+                    <div class="bottom-col-text">
+                        <p>
+                            Вы когда-нибудь откладывали написание теста? Ловили себя на использовании клавиш-стрелок в Vim? Поздравляю, у вас наблюдается гиперболическое обесценивание.
+                        </p>
+                        <p>
+                            Немедленная выгода от использования чего-то быстродоступного значительно смягчает боль, которую нужно перетерпеть, чтобы усвоить правильный синтаксис для перемещения на нужную строчку. Но как только вы поймёте как перемещаться быстрее, выгода в будущем намного выше. В итоге вы сохраните много времени.
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
         <section id="errors-in-planning" class="bg-img">
             <div class="container">
-
+                <div class="top-cols">
+                    <div>
+                        <img src="img/3.png" alt="Два человечка за компьютером" class="top-col-img">
+                    </div>
+                    <div>
+                        <span class="top-col-subtitle">
+                            Когнитивные искажения
+                        </span>
+                        <h3 class="top-col-title">
+                            Ошибка планирования
+                        </h3>
+                        <p class="top-col-text">
+                            Неправильно рассчитывать время необходимое для завершения задачи.
+                        </p>
+                    </div>
+                </div>
+                <div class="bottom-cols">
+                    <h4 class="bottom-col-title">
+                        Как проявляется
+                    </h4>
+                    <div class="bottom-col-text">
+                        <p>
+                            Одно из искажений, которое должно признать большинство из нас. И менеджеры проекта, и сами пользователи продукта — все склонны ставить сроки, в которые невозможно закончить запланированное.
+                        </p>
+                        <p style="margin-bottom: 10px;">
+                            Это отлично выражается в старом афоризме:
+                            <br>
+                            <br>
+                            Первые 90% готового кода отнимают первые 90% времени разработки. Оставшиеся 10% отнимают вторые 90% времени разработки.
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
