--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,11 @@
         <section class="header-section bg-img">
             <div class="container header-container">
                 <h1 class="title">
-                    <span class="orange">
                     Когнитивные
                     <br>
-                    искажения</span>
+                    искажения
                     <br>
-                    в программировании
+                    <span class="dark">в программировании</span>
                 </h1>
                 <img src="img/main.png" alt="Человечек за ноутбуком" class="header-img">
                 <div class="columns">
@@ -44,9 +43,9 @@
         <section class="video-section">
             <div class="container video-container">
                 <h2 class="video-title">
-                    Что же это такое,
+                    <span class="dark">Что же это такое,</span>
                     <br>
-                    <span class="orange">когнитивные искажения?</span>
+                    когнитивные искажения?
                 </h2>
                 <p class="video-description">
                     Что такое когнитивные искажения. Petrovna Channel
@@ -59,16 +58,16 @@
                 <div class="col-3 mb-20">
                     <div>
                         <h2 class="nav-title">
-                            <span class="orange">5 когнитивных искажений</span>
+                            5 когнитивных искажений
                             <br>
-                            о существовании которых стоит помнить
+                            <span class="white">о существовании которых стоит помнить</span>
                         </h2>
                     </div>
                     <div>
                         <a href="#ikea-effect" class="nav-link">
                             <div class="nav-item">
                                 <span class="card-number">1</span>
-                                <h3 class="orange">
+                                <h3>
                                     Эффект ИКЕА
                                 </h3>
                                 <p>
@@ -81,7 +80,7 @@
                         <a href="#premature-optimization" class="nav-link">
                             <div class="nav-item">
                                 <span class="card-number">2</span>
-                                <h3 class="orange">
+                                <h3>
                                     Преждевременная оптимизация
                                 </h3>
                                 <p class="mb-0">
@@ -144,7 +143,7 @@
                         <span class="top-col-subtitle">
                             Когнитивные искажения
                         </span>
-                        <h3 class="top-col-title">
+                        <h3 class="top-col-title dark">
                             Эффект ИКЕА
                         </h3>
                         <p class="top-col-text">
@@ -167,14 +166,14 @@
                 </div>
             </div>
         </section>
-        <section id="premature-optimization" class="bg-img bg-brown white">
+        <section id="premature-optimization" class="bg-img bg-brown">
             <div class="container">
-                <div class="top-cols">
+                <div class="top-cols white">
                     <div>
                         <span class="top-col-subtitle translucent-white">
                             Когнитивные искажения
                         </span>
-                        <h3 class="top-col-title">
+                        <h3 class="top-col-title white">
                             Преждевременная оптимизация
                         </h3>
                         <p class="top-col-text">
@@ -189,7 +188,7 @@
                     <h4 class="bottom-col-title brown bg-white">
                         Как проявляется
                     </h4>
-                    <div class="bottom-col-text">
+                    <div class="bottom-col-text white">
                         <p>
                             Если вы добавите аэродинамический спойлер к своему старому автомобилю вместо ремонта мотора, то автомобиль не станет быстрее.
                         </p>
@@ -210,7 +209,7 @@
                         <span class="top-col-subtitle">
                             Когнитивные искажения
                         </span>
-                        <h3 class="top-col-title">
+                        <h3 class="top-col-title dark">
                             Искажение новизны
                         </h3>
                         <p class="top-col-text">
@@ -240,7 +239,7 @@
                         <span class="top-col-subtitle translucent-white">
                             Когнитивные искажения
                         </span>
-                        <h3 class="top-col-title">
+                        <h3 class="top-col-title white">
                             Гиперболическое обесценивание
                         </h3>
                         <p class="top-col-text">
@@ -270,13 +269,13 @@
             <div class="container">
                 <div class="top-cols">
                     <div>
-                        <img src="img/3.png" alt="Два человечка за компьютером" class="top-col-img">
+                        <img src="img/5.png" alt="Два человечка за компьютером" class="top-col-img">
                     </div>
                     <div>
                         <span class="top-col-subtitle">
                             Когнитивные искажения
                         </span>
-                        <h3 class="top-col-title">
+                        <h3 class="top-col-title dark">
                             Ошибка планирования
                         </h3>
                         <p class="top-col-text">
@@ -306,6 +305,38 @@
     <footer>
         <section class="footer">
             <div class="container">
+                <div class="form-container">
+                    <div>
+                        <h3 class="white">
+                            Хотите узнать больше?
+                            <br>
+                            Подпишитесь на обновления
+                        </h3>
+                    </div>
+                    <div class="white">
+                        <form>
+                            <label for="your-email" class="label-email">Электронная почта</label>
+                            <div class="input-button">
+                                <input id="your-email" type="email" placeholder="Ваша электронная почта" class="email-input">
+                                <button class="form-button"></button>
+                            </div>
+                        </form>
+                        <span class="service-rules">
+                            Подписываясь, вы принимаете <a href="#" class="white">правила сервиса</a>
+                        </span>
+                    </div>
+                </div>
+                <div class="contact-info">
+                    <p>
+                        © 2020 Константин Константинопольский
+                    </p>
+                    <p>
+                        По материалам статьи <a href="https://medium.com/hackernoon/cognitive-biases-in-programming-5e937707c27b" class="blue">Ranadive Cognitive Biases in Programming</a>
+                    </p>
+                    <p>
+                        <a href="https://ru.hexlet.io/" class="blue">Курсы программирования Hexlet</a>
+                    </p>
+                </div>
 
             </div>
         </section>
