--- a/src/index.html
+++ b/src/index.html
@@ -291,7 +291,7 @@
                         <p>
                             Одно из искажений, которое должно признать большинство из нас. И менеджеры проекта, и сами пользователи продукта — все склонны ставить сроки, в которые невозможно закончить запланированное.
                         </p>
-                        <p style="margin-bottom: 10px;">
+                        <p class="mb-10">
                             Это отлично выражается в старом афоризме:
                             <br>
                             <br>
