--- a/src/index.html
+++ b/src/index.html
@@ -328,7 +328,7 @@
                 </div>
                 <div class="contact-info">
                     <p>
-                        © 2020 Константин Константинопольский
+                        © 2023 Артем Дарбинян
                     </p>
                     <p>
                         По материалам статьи <a href="https://medium.com/hackernoon/cognitive-biases-in-programming-5e937707c27b" class="blue">Ranadive Cognitive Biases in Programming</a>
